# rubberduck

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  rubberduck.yml
samples/: peekpoke.js  pointers.js  simple.js  struct.js  struct_pointer.js
src/: builtin_bindings.c  builtin_bindings.h  compat.c  compat.h  custom_bindings.h  main.c  memfuncs.c  memfuncs.h  net_fixup.c  net_fixup.h  primitives.c  primitives.h  safeRW.S  safeRW.h  taihen_extra.h
src/custom_bindings/: custom_bindings_skeleton.c
src/duktape/: duk_config.h  duktape.c
